--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
 		<script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
 		<script type='text/javascript'>
+		<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5CSCS76');</script>
+<!-- End Google Tag Manager -->
 		$(function() {
 			$('#tipsy').tipsy({fade: true, gravity: 's'});
 		});
@@ -18,6 +25,10 @@
 		
 	</head>
 	<body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CSCS76"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 		<div class="wrapper">
 			<img src="images/logo.png" alt="YourLogo" title="YourLogo"/>
 			<div class="hr"></div>
@@ -33,15 +44,15 @@
 			
 			<div class="hr"></div>
 			<section class="mailing-list">
-				<h2>Want to be the first to know when we're ready?</h2>
+				<h2>Be ready for next step in human Evolution</h2>
 				<form>
 					
-					<input type="submit" value="Subscribe">	
+	
 				</form>
 			</section><div class="clear"></div>
 			<div class="hr"></div>
 			
-			<p class="EvoStation">All rights reserved <a href="http://www.evostation.spce">EvoStation.Space</a> 2021</p>
+			<p class="EvoStation">All rights reserved <a href="http://evostation.space/">EvoStation.Space</a> 2021</p>
 		</div>
 	</body>
 </html>
