--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Coming Soon to a Browser Near You</title>		
+		<title>Coming Soon to a Browser Near You</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
 		<script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
 		<script type='text/javascript'>
@@ -19,10 +18,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			$('#tipsy').tipsy({fade: true, gravity: 's'});
 		});
 		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-205170529-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-205170529-1');
+</script>
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		
 	</head>
 	<body>
 	<!-- Google Tag Manager (noscript) -->
@@ -33,25 +41,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<img src="images/logo.png" alt="YourLogo" title="YourLogo"/>
 			<div class="hr"></div>
 			<h1>Coming Soon to a Browser Near You</h1>
-			
-						
 			<section class="progress">
 				<div class="progress-bar-container" id="tipsy" title="33% Complete"> <!-- Edit this title for the tooltip pop up -->
 					<article class="progress-bar" style="width:33%"  ></article> <!-- Edit the width percentage value to indicate progress -->
 				</div>
 				<article class="txt-launch-day-hat"></article>
 			</section>
-			
 			<div class="hr"></div>
 			<section class="mailing-list">
 				<h2>Be ready for next step in human Evolution</h2>
 				<form>
-					
-	
-				</form>
+					</form>
 			</section><div class="clear"></div>
 			<div class="hr"></div>
-			
 			<p class="EvoStation">All rights reserved <a href="http://evostation.space/">EvoStation.Space</a> 2021</p>
 		</div>
 	</body>
