--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
 		<script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
 		<script type='text/javascript'>
+		<!-- TradeDoubler site verification 3234238 -->
 		<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
