--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	!-- TradeDoubler site verification 3234238 -->
+	<!-- TradeDoubler site verification 3234238 -->
 		<meta charset="utf-8" />
 		<title>Coming Soon to a Browser Near You</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
