--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
 		<script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
 		<script type='text/javascript'>
-		<script>	$(function() {
+		$(function() {
 			$('#tipsy').tipsy({fade: true, gravity: 's'});
 		});
 		</script>
+		<!--[if IE]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 		<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -39,9 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-KYK132F2XT');
 </script>
-		<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+	
 	</head>
 	<body>
 	<!-- Google Tag Manager (noscript) -->
