--- a/index-ES.html
+++ b/index-ES.html
@@ -50,7 +50,7 @@
       <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
         <li class="nav-item dropdown active">
            </li>
-        <li class="nav-item">
+      <li class="nav-item">
           <a class="nav-link" href="https://www.facebook.com/Green-Gate-263067402261282"><img src="assets/img/Facebook.png" alt="" width="70" ></a>
         </li>
         <li class="nav-item">
@@ -62,7 +62,7 @@
        
       </ul>
       <div class="ml-auto my-2 my-lg-0">
-       <a href="index-ES.html" class="btn btn-primary rounded-pill">Castellano </a>
+        <a href="index.html" class="btn btn-primary2 rounded-pill">English</a>
       </div>
     </div>
   </div>
@@ -76,9 +76,9 @@
            <div class="slide-caption">
                         <h1 class="gradient-text">Green Gate</h1>
                       </div>
-         <div class="gradient-text2"><p class="mb-4">Green Gate is a private non-profit association<br>For cannabis users located in Barcelona</p></div>
+         <div class="gradient-text2"><p class="mb-4">Green Gate es una asociación privada sin fines de lucro<br>Para consumidores de cannabis ubicado en Barcelona</p></div>
 
-          <a href="#" class="btn btn-dark">Become An Associate</a>
+          <a href="#" class="btn btn-dark">Conviértete en Asociado</a>
 
         </div>
         </div>
@@ -89,7 +89,7 @@
 <div class="page-hero-section bg-image hero-home-1" style="background-image: url(assets/img/bg_hero_4.png);">
 <div class="page-section no-scroll">
   <div class="container">
-    <h2 class="gradient-text text-center wow fadeIn">Green Gate Cannabis Association</h2>
+    <h2 class="gradient-text text-center wow fadeIn">Green Gate Asociación de Cannabis</h2>
 
     <div class="row justify-content-center mt-5">
       <div class="col-lg-10">
@@ -99,9 +99,9 @@
               <div class="svg-icon mx-auto mb-4">
                 <img src="assets/img/icons/payment.png" alt="">
               </div>
-              <h5 class="fg-gray">Opening Times</h5>
-              <p class="fs-small">Opened every day, including weekends from
-11:00 until 23:00</p>
+              <h5 class="fg-gray">Los horarios de apertura</h5>
+              <p class="fs-small">Abierto todos los días, incluidos los fines de semana desde
+11:00 a 23:00</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 py-3 wow fadeInUp">
@@ -109,8 +109,8 @@
               <div class="svg-icon mx-auto mb-4">
                 <img src="assets/img/icons/customizable.png" alt="">
               </div>
-              <h5 class="fg-gray">The Best Selection</h5>
-              <p class="fs-small">Green Gate offers a wide range of the best quality strains of cannabis.</p>
+              <h5 class="fg-gray">La mejor seleccion</h5>
+              <p class="fs-small">Green Gate ofrece una amplia gama de variedades de cannabis de la mejor calidad.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 py-3 wow fadeInRight">
@@ -118,8 +118,8 @@
               <div class="svg-icon mx-auto mb-4">
                 <img src="assets/img/icons/concept.png" alt="">
               </div>
-              <h5 class="fg-gray">Location Barcelona</h5>
-              <p class="fs-small">Placed in the heart of Barcelona.<br>Carrer del Consell de Cent, 230
+              <h5 class="fg-gray">Ubicación Barcelona</h5>
+              <p class="fs-small">Situada en el corazón de Barcelona.<br>Carrer del Consell de Cent, 230
             </p>
             </div>
           </div>
@@ -138,16 +138,16 @@
         </div>
       </div>
       <div class="col-lg-5 pl-lg-5 wow fadeInUp">
-        <h2 class="gradient-text mb-4">Welcome to Green Gate</h2>
-        <p class="mb-4">The Association Green Gate is a non-profit private association for users of cannabis located in Barcelona,<br>
-         whose purpose is to offer a controlled and regulated space to Cannabis - Marijuna smokers.<br>
-Both those who consume it for recreational purposes and those who use it for therapeutic purposes</p>
-        <a href="#" class="btn btn-dark rounded-pill">Become An Associate</a>
+        <h2 class="gradient-text mb-4">Bienvenido a Green Gate</h2>
+        <p class="mb-4">La Asociación Green Gate es una asociación privada sin ánimo de lucro de consumidores de cannabis ubicada en Barcelona, <br>
+          cuya finalidad es ofrecer un espacio controlado y regulado a los fumadores de Cannabis - Marihuana. <br>
+Tanto quienes lo consumen con fines recreativos como quienes lo utilizan con fines terapéuticos</p>
+        <a href="#" class="btn btn-dark rounded-pill">Conviértete en Asociado</a>
       </div>
     </div>
   </div>
 </div>
- <h2 class="gradient-text text-center wow fadeIn">Gallery</h2>
+ <h2 class="gradient-text text-center wow fadeIn">Galería</h2>
 <div class="page-hero-section bg-image hero-home-2" style="background-color: #0fa646 ;">
 <div class="slideshow">
 
@@ -203,8 +203,8 @@ function showSlides() {
 <div class="page-section">
   <div class="container">
     <div class="gradient-text text-center wow fadeIn">
-      <h2 class="mb-4">Examples of our Strains </h2>
-      <p> <a href="#">Become a Member</a></p>
+      <h2 class="mb-4">Ejemplos de nuestras cepas </h2>
+      <p> <a href="#">Conviértete en miembro</a></p>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 justify-content-center align-items-center mt-5">
       <div class="p-3 wow zoomIn">
@@ -258,7 +258,7 @@ function showSlides() {
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-6 wow fadeIn">
-        <h2 class="gradient-text" >Opinions</h2>
+        <h2 class="gradient-text" >Opiniones</h2>
       </div>
     </div>
   </div>
@@ -273,8 +273,8 @@ function showSlides() {
           <span class="icon mai-star"></span>
         </div>
   
-        <div class="caption">A great club. The staff is very friendly and have a good vibe. Every weekend there is good music.<br>
-The variety of rooms ensures that you feel comfortable and can fully relax, especially with friends.</div>
+        <div class="caption">Un gran club. El personal es muy amable y tiene buen ambiente. Todos los fines de semana hay buena música. <br>
+La variedad de habitaciones asegura que se sienta cómodo y pueda relajarse por completo, especialmente con amigos.</div>
   
         <div class="avatar mt-3">
           <div class="avatar-img">
@@ -282,7 +282,7 @@ The variety of rooms ensures that you feel comfortable and can fully relax, espe
           </div>
           <div class="avatar-caption">
             <p class="mb-0 fw-medium fg-primary">Adam Gracikowski</p>
-            <div class="fs-vsmall fw-medium">Associate</div>
+            <div class="fs-vsmall fw-medium">Asociado</div>
           </div>
         </div>
       </div>
@@ -344,8 +344,8 @@ The variety of rooms ensures that you feel comfortable and can fully relax, espe
           <img src="assets/favicon-light.png" alt="" height="80">
         </div>
         <h3 class="gradient-text mb-3"><span class="fg-primary">Green</span>Gate</h3>
-        <p class="gradient-text caption">Green Gate is a private non-profit association
-For cannabis users located in Barcelona.</p>
+        <p class="gradient-text caption">Green Gate es una asociación privada sin fines de lucro
+Para consumidores de cannabis ubicados en Barcelona.</p>
 
        
       </div>
@@ -354,7 +354,7 @@ For cannabis users located in Barcelona.</p>
   
   <hr>
   <!-- Please don't remove or modify the credits below -->
-  <p class="gradient-text text-center mt-4 wow fadeIn">Copyright &copy; 2021 <a href="https://www.greengate.es/" class="fg-white fw-medium">GreenGate</a>. All right reserved</p>
+  <p class="gradient-text text-center mt-4 wow fadeIn">Copyright &copy; 2021 <a href="https://www.greengate.es/" class="fg-white fw-medium">GreenGate</a>. Todos los derechos reservados</p>
 </div>
 
 <script src="assets/js/jquery-3.5.1.min.js"></script>
